# shayde

./: .gitignore  README.md  healthcheck.sh  pyproject.toml
docker/: Dockerfile  fonts.conf.mac  fonts.conf.neutral  fonts.conf.windows
docs/: scenario-design.md  scenario-template.yaml  setup-amazon-linux-2023.md
docs/commands/: scenario-session.md
docs/design/: step-by-step-api.md
src/playcap/: __init__.py  __main__.py
src/playcap/cli/: __init__.py  capture.py  config.py  docker.py  main.py
src/playcap/config/: __init__.py  loader.py  schema.py
src/playcap/core/: __init__.py  auth.py  browser.py  capture.py  routes.py
src/playcap/docker/: __init__.py  manager.py
src/playcap/docker/templates/: docker-compose.yml.j2
src/playcap/proxy/: __init__.py  manager.py
src/shayde/: __init__.py  __main__.py
src/shayde/cli/: __init__.py  capture.py  config.py  docker.py  main.py  scenario.py  server.py  test.py
src/shayde/config/: __init__.py  loader.py  schema.py
src/shayde/core/: __init__.py  auth.py  browser.py  capture.py  routes.py
src/shayde/core/scenario/: __init__.py  actions.py  assertions.py  models.py  parser.py  reporter.py  runner.py  session.py  session_manager.py
src/shayde/docker/: __init__.py  manager.py
src/shayde/docker/templates/: docker-compose.yml.j2
src/shayde/proxy/: manager.py  server.py
src/shayde/server/: __init__.py  app.py  client.py
tests/: __init__.py  conftest.py  test_config.py
tests/fixtures/: test-scenario.yaml
